# WasmEdge

docs/book/en/src/embed/c/: ref.md
hfexample/: README.md
hfexample/example/src/: main.rs
hfexample/src/: lib.rs
include/host/host_function_example/: myhostbase.h  myhostenv.h  myhostfunc.h  myhostmodule.h
lib/host/host_function_example/: CMakeLists.txt  myhostfunc.cpp  myhostmodule.cpp
lib/vm/: CMakeLists.txt
tools/wasmedge/: wasmedger.cpp
